--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
 </head>
 <body>
     <a href="./blurry_loading/index.html">Blurry Loading</a>
-    <a href="./expanding_cards/script.js">Expanding Cards</a>
+    <a href="./dad-jokes/index.html">Dad Jokes</a>
+    <a href="./event-codes/index.html">Event Codes</a>
+    <a href="./expanding_cards/index.html">Expanding Cards</a>
+    <a href="./blurry_loading/index.html">Blurry Loading</a>
+    <a href="./faq/index.html">Faq</a>
+    <a href="./form/index.html">Form</a>
     <a href="./hidden_search_widget/index.html">Hidden Search Widget</a>
     <a href="./scroll_animation/index.html">Scroll Animation</a>
+    <a href="./sounding-board/index.html">Sounding Board</a>
+    <a href="./split-landing-page/index.html">Split Landing Page</a>
 </body>
 </html>
